// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`labelify should prefer config from call instead config file 1`] = `
Object {
  "added": Array [],
  "removed": Array [
    Object {
      "color": "bbbbbb",
      "default": false,
      "description": "b",
      "id": 2,
      "name": "b",
      "url": "https://api.github.com/repos/itgalaxy/labelify/labels/b",
    },
  ],
  "updated": Array [],
}
`;

exports[`labelify should success change labels with \`configFile\` option 1`] = `
Object {
  "added": Array [],
  "removed": Array [],
  "updated": Array [
    Object {
      "color": "aaaaaa",
      "default": false,
      "description": "Description",
      "id": 1,
      "name": "a",
      "priority": 20,
      "url": "https://api.github.com/repos/itgalaxy/labelify/labels/a",
    },
    Object {
      "color": "bbbbbb",
      "default": false,
      "description": "b",
      "id": 2,
      "name": "b",
      "url": "https://api.github.com/repos/itgalaxy/labelify/labels/b",
    },
  ],
}
`;

exports[`labelify should success change labels with \`overlap\` options 1`] = `
Object {
  "added": Array [],
  "removed": Array [
    Object {
      "color": "bbbbbb",
      "default": false,
      "description": "b",
      "id": 2,
      "name": "b",
      "url": "https://api.github.com/repos/itgalaxy/labelify/labels/b",
    },
  ],
  "updated": Array [],
}
`;

exports[`labelify should success create/update/remove labels 1`] = `
Object {
  "added": Array [
    Object {
      "color": "eeeeee",
      "default": false,
      "description": "E",
      "id": 5,
      "name": "e",
      "url": "https://api.github.com/repos/itgalaxy/labelify/labels/e",
    },
    Object {
      "color": "ffffff",
      "default": false,
      "description": "F",
      "id": 6,
      "name": "f",
      "url": "https://api.github.com/repos/itgalaxy/labelify/labels/f",
    },
  ],
  "removed": Array [],
  "updated": Array [
    Object {
      "color": "ababab",
      "default": false,
      "description": "b",
      "id": 2,
      "name": "b",
      "url": "https://api.github.com/repos/itgalaxy/labelify/labels/b",
    },
    Object {
      "color": "cccccc",
      "default": false,
      "description": "CC",
      "id": 2,
      "name": "c",
      "url": "https://api.github.com/repos/itgalaxy/labelify/labels/c",
    },
  ],
}
`;

exports[`labelify should success support custom api 1`] = `
Object {
  "added": Array [
    Object {
      "color": "#dddddd",
      "description": "d",
      "name": "d",
    },
  ],
  "removed": Array [
    Object {
      "color": "#aaaaaa",
      "description": "c",
      "name": "c",
    },
  ],
  "updated": Array [
    Object {
      "color": "#aaaaaa",
      "description": "A",
      "name": "a",
    },
  ],
}
`;

exports[`labelify should success update label - color 1`] = `
Object {
  "added": Array [],
  "removed": Array [],
  "updated": Array [
    Object {
      "color": "bbbbbb",
      "default": false,
      "description": "A",
      "id": 1,
      "name": "a",
      "url": "https://api.github.com/repos/itgalaxy/labelify/labels/a",
    },
  ],
}
`;

exports[`labelify should success update label - description (1) 1`] = `
Object {
  "added": Array [],
  "removed": Array [],
  "updated": Array [],
}
`;

exports[`labelify should success update label - description 1`] = `
Object {
  "added": Array [],
  "removed": Array [],
  "updated": Array [
    Object {
      "color": "aaaaaa",
      "default": false,
      "description": "Description",
      "id": 1,
      "name": "a",
      "url": "https://api.github.com/repos/itgalaxy/labelify/labels/a",
    },
  ],
}
`;

exports[`labelify should success update label - priority (integer) 1`] = `
Object {
  "added": Array [],
  "removed": Array [],
  "updated": Array [
    Object {
      "color": "aaaaaa",
      "default": false,
      "description": "Description",
      "id": 1,
      "name": "a",
      "url": "https://api.github.com/repos/itgalaxy/labelify/labels/a",
    },
  ],
}
`;

exports[`labelify should success update label - priority (server doesn't contain field) 1`] = `
Object {
  "added": Array [],
  "removed": Array [],
  "updated": Array [
    Object {
      "color": "aaaaaa",
      "default": false,
      "description": "Description",
      "id": 1,
      "name": "a",
      "priority": 20,
      "url": "https://api.github.com/repos/itgalaxy/labelify/labels/a",
    },
  ],
}
`;

exports[`labelify should success update label - priority (string) 1`] = `
Object {
  "added": Array [],
  "removed": Array [],
  "updated": Array [
    Object {
      "color": "aaaaaa",
      "default": false,
      "description": "Description",
      "id": 1,
      "name": "a",
      "priority": 20,
      "url": "https://api.github.com/repos/itgalaxy/labelify/labels/a",
    },
  ],
}
`;

exports[`labelify should throw error when label without name 1`] = `"Name is required for label"`;

exports[`labelify should throw the error on duplicate labels (2) 1`] = `"Found duplicate  \\"a\\", \\"b\\" label(s)"`;

exports[`labelify should throw the error on duplicate labels 1`] = `"Found duplicate  \\"a\\" label(s)"`;

exports[`labelify should throw the error on empty labels 1`] = `"You should have more than 0 labels"`;

exports[`labelify should throw the error when api error occurred - 'create' api call 1`] = `"API server problem"`;

exports[`labelify should throw the error when api error occurred - 'list' api call (1) 1`] = `"API server problem"`;

exports[`labelify should throw the error when api error occurred - 'list' api call 1`] = `"API server doesn't return list of labels"`;

exports[`labelify should throw the error when api error occurred - 'remove' api call 1`] = `"API server problem"`;

exports[`labelify should throw the error when api error occurred - 'update' api call 1`] = `"API server problem"`;

exports[`labelify should throw the error when label has invalid hex 1`] = `"Invalid hex value for \\"a\\" label"`;

exports[`labelify should throw the error when label has priority hex 1`] = `"Priority for \\"a\\" label must be equal 0 or greater"`;

exports[`labelify should throw the error when label without color 1`] = `"Color is required for \\"a\\" label"`;

exports[`labelify should throw the error when options are empty 1`] = `"You should have more than 0 labels"`;

exports[`labelify should throw the error without token 1`] = `"Token is required"`;
